# 3d-viewer

./: README.md  pyproject.toml  test.py
method_papr/: papr_config.py  papr_datamanager.py  papr_field.py  papr_model.py  papr_pipeline.py
method_papr/configs/: config.py
method_papr/models/: __init__.py  lpips.py  mlp.py  model.py
unet/: Makefile
unet/include/: conv-relu.h
unet/src/: conv-relu.cu  conv.cu  tensor.cu  unet-down.cu  unet-up.cu  utils.cpp
